<resources>
    <string name="app_name">Proyecto Chat App - Kotlin</string>

    <string name="btn_ir_registros">Registrarme</string>
    <string name="btn_ir_logueo">Ingresar</string>
    
    <string name="r_et_nombre_usuario">Nombre de usuario</string>
    <string name="r_et_email">Correo electrónico</string>
    <string name="r_et_password">Contraseña</string>
    <string name="r_et_r_password">Repita su contraseña</string>

    <string name="btn_registrar">Registrar</string>
</resources>